--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -15,11 +15,7 @@
             <div class="flex items-center justify-between">
                 <!-- Logo -->
                 <div class="flex items-center space-x-3">
-                    <svg class="w-12 h-12 text-primary" viewBox="0 0 48 48" fill="currentColor">
-                        <path d="M24 4L8 12v8c0 10 6 18.5 16 20 10-1.5 16-10 16-20v-8L24 4zm-2 32h4v4h-4v-4zm0-16h4v12h-4V20z"/>
-                        <rect x="18" y="14" width="12" height="2" rx="1"/>
-                        <rect x="16" y="18" width="16" height="2" rx="1"/>
-                    </svg>
+                    <img src="logotipo.png" alt="Lá de Casa Artisanal Logo" class="w-12 h-12 object-contain" style="width: 80px; height: 80px;" />
                     <div>
                         <h1 class="font-playfair font-bold text-2xl text-primary">Lá de Casa</h1>
                         <p class="font-dancing text-sm text-secondary">Artisanal</p>
