--- a/pages/product_catalog.html
+++ b/pages/product_catalog.html
@@ -740,17 +740,11 @@
                             </svg>
                             <span class="font-source-sans text-gray-300">(51) 99771-8375</span>
                         </div>
-                        <div class="flex items-center space-x-3">
-                            <svg class="w-5 h-5 text-accent" fill="currentColor" viewBox="0 0 24 24">
-                                <path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/>
-                            </svg>
-                            <span class="font-source-sans text-gray-300">contato@ladecasa.com.br</span>
-                        </div>
                         <div class="flex items-start space-x-3">
                             <svg class="w-5 h-5 text-accent mt-1" fill="currentColor" viewBox="0 0 24 24">
                                 <path d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"/>
                             </svg>
-                            <span class="font-source-sans text-gray-300">São Paulo, SP<br />Entregamos em toda região metropolitana</span>
+                            <span class="font-source-sans text-gray-300">Santo Antônio da Patrulha, RS<br />Entregamos em toda região</span>
                         </div>
                     </div>
                 </div>
