--- a/pages/contact_orders.html
+++ b/pages/contact_orders.html
@@ -18,7 +18,7 @@
                     <img src="logotipo.png" alt="Lá de Casa Artisanal Logo" class="w-12 h-12 object-contain" style="width: 80px; height: 80px;" />
                     <div>
                         <h1 class="font-playfair font-bold text-2xl text-primary">Lá de Casa</h1>
-                        <p class="font-dancing text-sm text-secondary">Artisanal</p>
+                        <p class="font-dancing text-sm text-secondary">Artesanal</p>
                     </div>
                 </div>
 
@@ -151,8 +151,8 @@
                 </h3>
                 <div class="grid md:grid-cols-3 gap-6" id="product-selector">
                     <!-- Ravioli -->
-                    <div class="product-card bg-surface rounded-lg p-4 cursor-pointer border-2 border-transparent hover:border-primary transition-all duration-300" data-product="Fettuccine" data-price="28.90">
-                        <img src="https://images.unsplash.com/photo-1587740908075-9e245070dfaa?q=80&w=2940&auto=format&fit=crop" alt="Fettuccine" class="w-full h-32 object-cover rounded-lg mb-3" loading="lazy" onerror="this.src='https://images.pexels.com/photos/4518843/pexels-photo-4518843.jpeg?auto=compress&cs=tinysrgb&w=2940'; this.onerror=null;" />
+                    <div class="product-card bg-surface rounded-lg p-4 cursor-pointer border-2 border-transparent hover:border-primary transition-all duration-300" data-product="Fettuccine" data-price="15.00">
+                        <img src="img_fet.jpg" alt="Fettuccine" class="w-full h-32 object-cover rounded-lg mb-3" loading="lazy" />
                         <h4 class="font-montserrat font-bold text-secondary mb-2">Fettuccine</h4>
                         <p class="font-source-sans text-sm text-text-secondary mb-3">Serve 2 pessoas</p>
                         <div class="flex items-center justify-between">
@@ -166,12 +166,12 @@
                     </div>
 
                     <!-- Cappelletti -->
-                    <div class="product-card bg-surface rounded-lg p-4 cursor-pointer border-2 border-transparent hover:border-primary transition-all duration-300" data-product="Cappelletti da Nonna" data-price="32.90">
-                        <img src="https://images.pexels.com/photos/4518843/pexels-photo-4518843.jpeg?auto=compress&cs=tinysrgb&w=2940" alt="Cappelletti da Nonna" class="w-full h-32 object-cover rounded-lg mb-3" loading="lazy" onerror="this.src='https://images.pixabay.com/photo/2018/07/18/19/12/pasta-3547078_1280.jpg'; this.onerror=null;" />
-                        <h4 class="font-montserrat font-bold text-secondary mb-2">Cappelletti da Nonna</h4>
+                    <div class="product-card bg-surface rounded-lg p-4 cursor-pointer border-2 border-transparent hover:border-primary transition-all duration-300" data-product="Lasanha" data-price="20.00">
+                        <img src="img_las.jpg" alt="Lasanha" class="w-full h-32 object-cover rounded-lg mb-3" loading="lazy"  />
+                        <h4 class="font-montserrat font-bold text-secondary mb-2">Lasanha</h4>
                         <p class="font-source-sans text-sm text-text-secondary mb-3">Serve 2 pessoas</p>
                         <div class="flex items-center justify-between">
-                            <span class="font-montserrat font-bold text-primary">R$ 32,90</span>
+                            <span class="font-montserrat font-bold text-primary">R$ 20,00</span>
                             <div class="quantity-controls flex items-center space-x-2">
                                 <button class="quantity-btn minus w-8 h-8 bg-border rounded-full flex items-center justify-center text-text-secondary hover:bg-primary hover:text-white transition-colors">-</button>
                                 <span class="quantity font-montserrat font-medium w-8 text-center">0</span>
@@ -181,12 +181,12 @@
                     </div>
 
                     <!-- Tortellini -->
-                    <div class="product-card bg-surface rounded-lg p-4 cursor-pointer border-2 border-transparent hover:border-primary transition-all duration-300" data-product="Tortellini ai Funghi" data-price="35.90">
-                        <img src="https://images.pixabay.com/photo/2018/07/18/19/12/pasta-3547078_1280.jpg" alt="Tortellini ai Funghi" class="w-full h-32 object-cover rounded-lg mb-3" loading="lazy" onerror="this.src='https://images.unsplash.com/photo-1587740908075-9e245070dfaa?q=80&w=2940&auto=format&fit=crop'; this.onerror=null;" />
-                        <h4 class="font-montserrat font-bold text-secondary mb-2">Tortellini ai Funghi</h4>
+                    <div class="product-card bg-surface rounded-lg p-4 cursor-pointer border-2 border-transparent hover:border-primary transition-all duration-300" data-product="Sofiatelli" data-price="17.00">
+                        <img src="img_sof.jpg" alt="Sofiatelli" class="w-full h-32 object-cover rounded-lg mb-3" loading="lazy" />
+                        <h4 class="font-montserrat font-bold text-secondary mb-2">Sofiatelli</h4>
                         <p class="font-source-sans text-sm text-text-secondary mb-3">Serve 2 pessoas</p>
                         <div class="flex items-center justify-between">
-                            <span class="font-montserrat font-bold text-primary">R$ 35,90</span>
+                            <span class="font-montserrat font-bold text-primary">R$ 17,00</span>
                             <div class="quantity-controls flex items-center space-x-2">
                                 <button class="quantity-btn minus w-8 h-8 bg-border rounded-full flex items-center justify-center text-text-secondary hover:bg-primary hover:text-white transition-colors">-</button>
                                 <span class="quantity font-montserrat font-medium w-8 text-center">0</span>
@@ -245,8 +245,11 @@
                     <h3 class="font-playfair font-bold text-xl text-secondary mb-4">Telefone</h3>
                     <p class="font-source-sans text-text-secondary leading-relaxed">
                         <a href="tel:+5551997718375" class="hover:text-primary transition-colors">(51) 99771-8375</a><br />
-                        Segunda a Domingo<br />
-                        13h às 22h
+                        <br>
+                        Segunda a Sexta<br />
+                        13h às 22h<br />
+                        Finais de semana<br />
+                        13h às 18h
                     </p>
                 </div>
 
@@ -454,10 +457,10 @@
                 <!-- Brand Info -->
                 <div class="md:col-span-2">
                     <div class="flex items-center space-x-3 mb-6">
-                    <img src="logotipo.png" alt="Lá de Casa Artisanal Logo" class="w-12 h-12 object-contain" style="width: 80px; height: 80px;" />
+                    <img src="logotipo.png" alt="Lá de Casa artesanal Logo" class="w-12 h-12 object-contain" style="width: 80px; height: 80px;" />
                     <div>
                             <h3 class="font-playfair font-bold text-2xl text-accent">Lá de Casa</h3>
-                            <p class="font-dancing text-lg">Artisanal</p>
+                            <p class="font-dancing text-lg">Artesanal</p>
                         </div>
                     </div>
                     <p class="font-source-sans text-gray-300 leading-relaxed mb-6">
