--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -200,7 +200,7 @@
                         Fettuccine
                     </h3>
                     <p class="font-source-sans text-text-secondary mb-4 leading-relaxed">
-                        Pacote de massa Fettuccine 200g
+                        Tirinhas largas e planas. Ideal pra molhos cremosos e bem temperados!
                     </p>
                     <div class="flex items-center justify-between">
                         <span class="font-montserrat font-bold text-2xl text-primary">R$ 15,00</span>
@@ -221,11 +221,11 @@
                         Lasanha
                     </h3>
                     <p class="font-source-sans text-text-secondary mb-4 leading-relaxed">
-                        Forma de lasanha 200g
+                        Clássica em camadas, massa larga e retinha.
                     </p>
                     <div class="flex items-center justify-between">
-                        <span class="font-montserrat font-bold text-2xl text-primary">R$ 17,00</span>
-                        <span class="font-source-sans text-sm text-text-secondary">Serve 1 pessoas</span>
+                        <span class="font-montserrat font-bold text-2xl text-primary">R$ 20,00</span>
+                        <span class="font-source-sans text-sm text-text-secondary">Serve 2 pessoas</span>
                     </div>
                 </div>
 
@@ -242,7 +242,7 @@
                         Sofiatelli
                     </h3>
                     <p class="font-source-sans text-text-secondary mb-4 leading-relaxed">
-                        Bandeja de Sofiatelli 200g
+                        Massa recheada, dobrada com carinho. Ideal com molhos cremosos e sabores marcantes.
                     </p>
                     <div class="flex items-center justify-between">
                         <span class="font-montserrat font-bold text-2xl text-primary">R$ 17,00</span>
