--- a/pages/product_catalog.html
+++ b/pages/product_catalog.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Catálogo de Massas - Lá de Casa Artisanal</title>
+    <title>Catálogo de Massas - Lá de Casa Artesanal</title>
     <meta name="description" content="Explore nosso catálogo completo de massas artesanais. Ravioli, cappelletti, gnocchi e muito mais, feitos com ingredientes selecionados e receitas tradicionais." />
     <link rel="stylesheet" href="../css/main.css" />
 <script type="module" src="https://static.rocket.new/rocket-web.js?_cfg=https%3A%2F%2Fldecasa9153back.builtwithrocket.new&_be=https%3A%2F%2Fapplication.rocket.new&_v=0.1.6"></script>
@@ -18,7 +18,7 @@
                     <img src="logotipo.png" alt="Lá de Casa Artisanal Logo" class="w-12 h-12 object-contain" style="width: 80px; height: 80px;" />
                     <div>
                         <h1 class="font-playfair font-bold text-2xl text-primary">Lá de Casa</h1>
-                        <p class="font-dancing text-sm text-secondary">Artisanal</p>
+                        <p class="font-dancing text-sm text-secondary">Artesanal</p>
                     </div>
                 </div>
 
